[gd_scene load_steps=6 format=3 uid="uid://dkfboj8dhuffr"]

[ext_resource type="Script" path="res://Scripts/GUI/main_menu_interface.gd" id="1_50pmc"]
[ext_resource type="Texture2D" uid="uid://7afyvrptvpp1" path="res://Images/GUI/Backgrounds/main_menu.png" id="1_n75hg"]
[ext_resource type="PackedScene" uid="uid://dfo3vycoymbrt" path="res://Scenes/GUI/settings_menu_interface.tscn" id="3_rwwvb"]
[ext_resource type="AudioStream" uid="uid://bgf2u2ph1cs3x" path="res://Audio/Music/1 - Adventure Begin.ogg" id="4_lc11v"]

[sub_resource type="SystemFont" id="SystemFont_dwcgt"]
font_names = PackedStringArray("Impact")

[node name="main_menu_interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50pmc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_n75hg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_dwcgt")
theme_override_font_sizes/font_size = 64
text = "Oblivion Echo of the past"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="New_game_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Играть"

[node name="Settings_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Настройки"

[node name="Exit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Выход"

[node name="settings_menu_interface" parent="." instance=ExtResource("3_rwwvb")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lc11v")
volume_db = -14.054
autoplay = true
bus = &"Music"
